# docs/openapi.yaml
@@ -11,7 +11,7 @@ servers:
 paths:
   /api/estado:
     get:
-      summary: Api para obtener el estado del sistema
+      summary: Api para obtener el estado de la aplicacion
       tags: ['estado']
       operationId: get-api-v1-status
       description: Api de estado del sistema
@@ -29,3 +29,289 @@ paths:
                   hora:
                     type: number
                     example: 1612800763
+  /api/auth:
+    post:
+      summary: Api para autenticacion con usuario y contrasena
+      tags: ['autenticacion']
+      operationId: post-api-v1-auth
+      description: Api para autenticacion
+      requestBody:
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                usuario:
+                  type: string
+                  example: '123456'
+                contrasena:
+                  type: string
+                  example: 'password'
+      responses:
+        '200':
+          description: OK
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  mensaje: 
+                    type: string
+                    example: 'ok'
+                  finalizado:
+                    type: boolean
+                    example: true
+                  datos:
+                    type: object
+                    properties:
+                      access_token:
+                        type: string
+                        example: 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpZCI6ImQ1ZGUxMmRmLTNjYzMtNWE1OC1hNzQyLWJlMjQwMzA0ODJkOCIsInJvbGVzIjpbIkFETUlOSVNUUkFET1IiXSwiaWF0IjoxNjE3OTM0NTU0LCJleHAiOjE2MTc5MzQ4NTR9.ELcQrw-YPo3q6CDLs53StTq2OHRVkk_bp9lCiDUbO2g'
+                      id:
+                        type: string
+                        example: 'd5de12df-3cc3-5a58-a742-be24030482d8'
+  /api/usuarios/perfil:
+    get:
+      summary: Obtiene la informacion del perfil del usuario
+      tags: ['usuario']
+      operationId: get-api-v1-usuarios-profile
+      description: Api para obtener la informacion del perfil del usuario
+      responses:
+        '200':
+          description: OK
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  mensaje: 
+                    type: string
+                    example: 'Registro(s) obtenido(s) con exito!'
+                  finalizado:
+                    type: boolean
+                    example: true
+                  datos:
+                    type: object
+                    properties:
+                      id:
+                        type: string
+                        example: 'd5de12df-3cc3-5a58-a742-be24030482d8'
+                      usuario:
+                        type: string
+                        example: 'ADMINISTRADOR'
+                      roles:
+                        type: array
+                        items:
+                          type: object
+                          properties:
+                            rol: 
+                              type: string
+                              example: 'ADMINISTRADOR'
+                            modulos:
+                              type: array
+                              items:
+                                type: object
+                                properties:
+                                  id: 
+                                    type: string
+                                    example: 'b320fe27-5644-5712-8423-198302b01e25'
+                                  label:
+                                    type: string
+                                    example: 'Usuarios'
+                                  url:
+                                    type: string
+                                    example: '/usuarios'
+                                  icono:
+                                    type: string
+                                    example: 'mdiAccountCog'
+                                  nombre:
+                                    type: string
+                                    example: 'usuarios'
+                                  estado:
+                                    type: string
+                                    example: 'ACTIVO'
+                      persona:
+                        type: object
+                        properties:
+                          nombres:
+                            type: string
+                            example: 'JUAN'
+                          primerApellido:
+                            type: string
+                            example: 'PEREZ'
+                          segundoApellido:
+                            type: string
+                            example: 'PEREZ'
+                          tipoDocumento:
+                            type: string
+                            example: 'CI'
+                          nroDocumento:
+                            type: string
+                            example: '9270815'
+                          fechaNacimiento:
+                            type: string
+                            example: '2002-02-09T00:00:00.000Z'
+  /api/autorizacion/politicas/roles:
+    get:
+      summary: Api para obtener las politicas definidas en formato CASBIN
+      tags: ['autorizacion']
+      operationId: get-api-autorizacion-politicas-roles
+      description: Api para obtener las politicas definidas en formato CASBIN
+      responses:
+        '200':
+          description: OK
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  mensaje: 
+                    type: string
+                    example: 'Registro(s) obtenido(s) con exito!'
+                  finalizado:
+                    type: boolean
+                    example: true
+                  datos:
+                    type: array
+                    items:
+                      type: array
+                      items:
+                        type: string
+                      example: ['ADMINISTRADOR', '/usuarios', 'create|read|update', 'frontend']
+  /api/usuarios:
+    get:
+      summary: Api para obtener el listado de usuarios
+      tags: ['usuario']
+      operationId: get-api-usuarios
+      description: Api para obtener el listado de usuarios
+      responses:
+        '200':
+          description: OK
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  mensaje: 
+                    type: string
+                    example: 'Registro(s) obtenido(s) con exito!'
+                  finalizado:
+                    type: boolean
+                    example: true
+                  datos:
+                    type: object
+                    properties:
+                      filas:
+                        type: array
+                        items:
+                          type: object
+                          properties:
+                            id:
+                              type: string
+                              example: 'd5de12df-3cc3-5a58-a742-be24030482d8'
+                            usuario:
+                              type: string
+                              example: 'ADMINISTRADOR'
+                            estado:  
+                              type: string
+                              example: 'ACTIVO'
+                      total:
+                        type: number
+                        example: 1
+  /api/autorizacion/politicas:
+    get:
+      summary: Api para obtener el listado de politicas
+      tags: ['autorizacion']
+      operationId: get-api-autorizacion-politicas
+      description: Api para obtener el listado de politicas
+      responses:
+        '200':
+          description: OK
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  mensaje: 
+                    type: string
+                    example: 'Registro(s) obtenido(s) con exito!'
+                  finalizado:
+                    type: boolean
+                    example: true
+                  datos:
+                    type: object
+                    properties:
+                      filas:
+                        type: array
+                        items:
+                          type: object
+                          properties:
+                            sujeto:
+                              type: string
+                              example: 'ADMINISTRADOR'
+                            objeto:
+                              type: string
+                              example: '/usuarios'
+                            accion:  
+                              type: string
+                              example: 'read'
+                            app:
+                              type: string
+                              example: 'frontend'
+                      total:
+                        type: number
+                        example: 1
+    post:
+      summary: Api para crear una nueva politica
+      tags: ['autorizacion']
+      operationId: post-api-autorizacion-politicas
+      description: Api para crear una nueva politica
+      requestBody:
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                sujeto:
+                  type: string
+                  example: 'ADMINISTRADOR'
+                objeto:
+                  type: string
+                  example: 'recurso'
+                accion:
+                  type: string
+                  example: 'read'
+                app:
+                  type: string
+                  example: 'frontend'
+      responses:
+        '201':
+          description: CREATED
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  mensaje:
+                    type: string
+                    example: 'Registro creado con exito!'
+                  finalizado:
+                    type: boolean
+                    example: true
+                  datos:
+                    type: object
+                    properties:
+                      sujeto:
+                        type: string
+                        example: 'ADMINISTRADOR'
+                      objeto:
+                        type: string
+                        example: 'recurso'
+                      accion:
+                        type: string
+                        example: 'read'
+                      app:
+                        type: string
+                        example: 'frontend'
+                                
+                      
