# src/application/usuario/usuario.controller.ts
@@ -12,63 +12,54 @@ import {
   UsePipes,
   ValidationPipe,
 } from '@nestjs/common';
-import {
-  SUCCESS_CREATE,
-  SUCCESS_DELETE,
-  SUCCESS_LIST,
-  SUCCESS_UPDATE,
-} from 'src/common/constants';
+import { AbstractController } from 'src/common/dto/abstract-controller.dto';
 import { PaginacionQueryDto } from 'src/common/dto/paginacion-query.dto';
-import { successResponse } from 'src/common/lib/http.module';
 import { JwtAuthGuard } from '../../core/authentication/guards/jwt-auth.guard';
 import { UsuarioDto } from './dto/usuario.dto';
 // eslint-disable-next-line @typescript-eslint/no-unused-vars
 import { UsuarioService } from './usuario.service';
 
 @Controller('usuarios')
-export class UsuarioController {
-  constructor(private usuarioService: UsuarioService) {}
+export class UsuarioController extends AbstractController {
+  constructor(private usuarioService: UsuarioService) {
+    super();
+  }
   // GET users
   @UseGuards(JwtAuthGuard)
   @Get()
   async recuperar(@Query() paginacionQueryDto: PaginacionQueryDto) {
-    return successResponse(
-      await this.usuarioService.recuperar(paginacionQueryDto),
-      SUCCESS_LIST,
-    );
+    const result = await this.usuarioService.recuperar(paginacionQueryDto);
+    return this.successList(result);
   }
+
   @UseGuards(JwtAuthGuard)
-  @Get('profile')
-  getProfile(@Request() req) {
-    return this.usuarioService.buscarUsuarioId(req.user.id);
+  @Get('perfil')
+  async getProfile(@Request() req) {
+    const { id: idUsuario } = req.user;
+    const result = await this.usuarioService.buscarUsuarioId(idUsuario);
+    return this.successList(result);
   }
   //create user
   @UseGuards(JwtAuthGuard)
   @Post()
   @UsePipes(ValidationPipe)
   async guardar(@Body() usuarioDto: UsuarioDto) {
-    return successResponse(
-      await this.usuarioService.guardar(usuarioDto),
-      SUCCESS_CREATE,
-    );
+    const result = await this.usuarioService.guardar(usuarioDto);
+    return this.successCreate(result);
   }
   //update user
   @UseGuards(JwtAuthGuard)
   @Patch(':id')
   async update(@Param('id') id: string, @Body() usuarioDto: UsuarioDto) {
-    return successResponse(
-      await this.usuarioService.update(id, usuarioDto),
-      SUCCESS_UPDATE,
-    );
+    const result = await this.usuarioService.update(id, usuarioDto);
+    return this.successCreate(result);
   }
 
   //delete user
   @UseGuards(JwtAuthGuard)
   @Delete(':id')
   async remove(@Param('id') id: string) {
-    return successResponse(
-      await this.usuarioService.remove(id),
-      SUCCESS_DELETE,
-    );
+    const result = await this.usuarioService.remove(id);
+    return this.successDelete(result);
   }
 }
