# src/core/authorization/controller/authorization.controller.ts
@@ -2,30 +2,23 @@ import { Body, Controller, Inject, Post, Get } from '@nestjs/common';
 import { WINSTON_MODULE_PROVIDER } from 'nest-winston';
 import { Logger } from 'winston';
 import { AuthZManagementService } from 'nest-authz';
-import { successResponse } from '../../../common/lib/http.module';
 import { totalRowsResponse } from '../../../common/lib/http.module';
-import {
-  SUCCESS_CREATE,
-  SUCCESS_DELETE,
-  SUCCESS_LIST,
-} from '../../../common/constants';
+import { AbstractController } from 'src/common/dto/abstract-controller.dto';
 
 @Controller('autorizacion')
-export class AuthorizationController {
+export class AuthorizationController extends AbstractController {
   constructor(
     @Inject(WINSTON_MODULE_PROVIDER) private readonly logger: Logger,
     private readonly rbacSrv: AuthZManagementService,
-  ) {}
+  ) {
+    super();
+  }
 
   @Post('/politicas')
   async crearPolitica(@Body() politica) {
     const { sujeto, objeto, accion, app } = politica;
-    return successResponse(
-      (await this.rbacSrv.addPolicy(sujeto, objeto, accion, app))
-        ? { sujeto, objeto, accion, app }
-        : {},
-      SUCCESS_CREATE,
-    );
+    await this.rbacSrv.addPolicy(sujeto, objeto, accion, app);
+    return this.successCreate(politica);
   }
 
   @Get('/politicas')
@@ -40,26 +33,19 @@ export class AuthorizationController {
         app: respuesta[i][3],
       });
     }
-    return successResponse(
-      totalRowsResponse([resultado, respuesta.length]),
-      SUCCESS_LIST,
-    );
+    return this.successList(totalRowsResponse([resultado, resultado.length]));
   }
 
   @Post('/politicas/eliminar')
   async eliminarPolitica(@Body() politica) {
     const { sujeto, objeto, accion, app } = politica;
-    return successResponse(
-      (await this.rbacSrv.removePolicy(sujeto, objeto, accion, app))
-        ? { sujeto, objeto, accion, app }
-        : {},
-      SUCCESS_DELETE,
-    );
+    await this.rbacSrv.removePolicy(sujeto, objeto, accion, app);
+    return this.successDelete(politica);
   }
 
   @Get('/politicas/roles')
   async obtenerRoles() {
-    const resultado = await this.rbacSrv.getPolicy();
-    return successResponse(resultado, SUCCESS_LIST);
+    const result = await this.rbacSrv.getPolicy();
+    return this.successList(result);
   }
 }
